# long-running-agents

./: .gitignore  USAGE_GUIDE.md  pyproject.toml
specs/: example-chat-app.yaml  example-todo-app.yaml
src/: config.py  features.py  hooks.py  main.py  orchestrator.py  progress.py  prompts.py
src/agents/: __init__.py  coder.py  initializer.py  verifier.py
